objects/copado__Release__c.object
<CustomObject>
    <fields>
        <fullName>Blocking_reason__c</fullName>
        <label>Blocking reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <inlineHelpText>This day, the release will be closed for development and no more User Stories will be allowed to be added.</inlineHelpText>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Documentation_Release_Notes__c</fullName>
        <label>Documentation Release Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Link_in_Production__c</fullName>
        <label>Installation Link in Production</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Installation_Link_in_Sandbox__c</fullName>
        <label>Installation Link in Sandbox</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Parent_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this to create a Version Map of related project/services.</description>
        <inlineHelpText>e.g. Backend v45.0.0 will be the parent for Jobs v45.0.0 and API v45.0.0</inlineHelpText>
        <label>Parent Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sandboxes_Planned_Date__c</fullName>
        <inlineHelpText>Planned Date for Customers&apos; Sandboxes</inlineHelpText>
        <label>Sandboxes Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Release_Notes__c</fullName>
        <label>Technical Release Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Visible_in_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible in Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Base_Branch__c</fullName>
        <description>All user story feature branches are created out of the main branch of the Deployment Flow. If a Release base branch is specified, all feature branches of user stories linked to the Release will be created out of the base branch.</description>
        <inlineHelpText>All user story feature branches are created out of the main branch of the Deployment Flow. If a Release base branch is specified, all feature branches of user stories linked to the Release will be created out of the base branch.</inlineHelpText>
        <label>Base Branch</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Planned_Date__c</fullName>
        <inlineHelpText>Planned date for Production environments</inlineHelpText>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Ready for Testing</fullName>
                </value>
                <value>
                    <fullName>Approved by QA</fullName>
                </value>
                <value>
                    <fullName>Rejected by QA</fullName>
                </value>
                <value>
                    <fullName>Ready for Release</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Version__c</fullName>
        <description>When a Promotion linked to this Release is merged into the Main Branch of the deployment flow, Copado will tag the Main Branch with this version number. This value is typically a major (e.g. v7), minor (v7.3) or patch (v7.3.2) release.</description>
        <inlineHelpText>When a Promotion linked to this Release is merged into the Main Branch of the deployment flow, Copado will tag the Main Branch with this version number. This value is typically a major (e.g. v7), minor (v7.3) or patch (v7.3.2) release.</inlineHelpText>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>APO_Releases</fullName>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>APO Week</value>
        </filters>
        <label>APO Releases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Version__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Project__c</field>
            <operation>contains</operation>
            <value>backend</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Backend</value>
        </filters>
        <label>Backend</label>
    </listViews>
    <listViews>
        <fullName>All_NA_Releases</fullName>
        <columns>NAME</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Version__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Technical_Release_Notes__c</columns>
        <columns>copado__Description__c</columns>
        <columns>Close_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Parent_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NA</value>
        </filters>
        <label>All &apos;NA&apos; Releases</label>
    </listViews>
    <listViews>
        <fullName>Analytics_Releases</fullName>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Analytics,DevOps 360,tableau</value>
        </filters>
        <label>Analytics Releases</label>
    </listViews>
    <listViews>
        <fullName>Application</fullName>
        <columns>NAME</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Version__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Project__c</field>
            <operation>contains</operation>
            <value>Application</value>
        </filters>
        <label>Application</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CRT_EVSM_Releases</fullName>
        <columns>NAME</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>CRT,EVSM</value>
        </filters>
        <label>CRT / EVSM Releases</label>
    </listViews>
    <listViews>
        <fullName>CVC_Releases</fullName>
        <columns>NAME</columns>
        <columns>copado__Version__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <columns>copado__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>CVC</value>
        </filters>
        <label>CVC Releases</label>
    </listViews>
    <listViews>
        <fullName>DX_Extension</fullName>
        <columns>NAME</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Version__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Project__c</field>
            <operation>contains</operation>
            <value>Copado Salesforce DX Extension</value>
        </filters>
        <label>DX Extension</label>
    </listViews>
    <listViews>
        <fullName>DX_Extension1</fullName>
        <columns>NAME</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Version__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Technical_Release_Notes__c</columns>
        <columns>copado__Description__c</columns>
        <columns>Close_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Parent_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>DX Extension</value>
        </filters>
        <label>DX Extension</label>
    </listViews>
    <listViews>
        <fullName>Latest_Releases_Calendar</fullName>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Planned_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/3/2020</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>APO,Playgrounds</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>Rejected by QA,Released</value>
        </filters>
        <label>Latest Releases Calendar</label>
    </listViews>
    <listViews>
        <fullName>NA_Releases</fullName>
        <columns>NAME</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Version__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NA</value>
        </filters>
        <label>NA Releases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Next_Releases_Calendar</fullName>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>Close_Date__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <columns>copado__Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notContain</operation>
            <value>Cancelled,Rejected by QA,Released</value>
        </filters>
        <filters>
            <field>Parent_Release__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>copado__Planned_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2021</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>APO,Playgrounds</value>
        </filters>
        <filters>
            <field>copado__Project__c</field>
            <operation>contains</operation>
            <value>backend</value>
        </filters>
        <label>Next Releases Calendar (backend)</label>
    </listViews>
    <listViews>
        <fullName>Next_Releases_Calendar_ALL</fullName>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>Close_Date__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notContain</operation>
            <value>Cancelled,Rejected by QA,Released</value>
        </filters>
        <filters>
            <field>Parent_Release__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>copado__Planned_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>APO,Playgrounds,people</value>
        </filters>
        <label>Next Releases Calendar (ALL)</label>
    </listViews>
    <listViews>
        <fullName>Next_Releases_Calendar_Salesforce</fullName>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>Close_Date__c</columns>
        <columns>copado__Planned_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notContain</operation>
            <value>Cancelled,Rejected by QA,Released</value>
        </filters>
        <filters>
            <field>Parent_Release__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>copado__Planned_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2021</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>APO,Playgrounds</value>
        </filters>
        <filters>
            <field>copado__Project__c</field>
            <operation>notContain</operation>
            <value>backend</value>
        </filters>
        <label>Next Releases Calendar (Salesforce)</label>
    </listViews>
    <listViews>
        <fullName>Playgrounds_Releases</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Playgrounds Week</value>
        </filters>
        <label>Playgrounds Releases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Provide_a_blocking_reason</fullName>
        <active>true</active>
        <description>If the release is blocked a reason must be provided</description>
        <errorConditionFormula>AND(
TEXT(copado__Status__c)==&quot;Blocked&quot;,
ISBLANK(Blocking_reason__c)
)</errorConditionFormula>
        <errorDisplayField>Blocking_reason__c</errorDisplayField>
        <errorMessage>You must provide a blocking reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Validate_spaces_in_version</fullName>
        <active>true</active>
        <description>Make sure no spaces are there in version field</description>
        <errorConditionFormula>CONTAINS(copado__Version__c,&quot; &quot;)</errorConditionFormula>
        <errorDisplayField>copado__Version__c</errorDisplayField>
        <errorMessage>please dont include spaces in version field</errorMessage>
    </validationRules>
</CustomObject>